# FluxPM

./: Cargo.toml  README.md  create_package.py  flux  flux.conf  hello-1.0.0.json  hello-1.0.0.tar.zst  hello.sh  libc-1.0.0.json  libc.tar.zst  packages.yaml
hello-1.0.0/: hello
src/: main.rs
