# Cargo.toml

[package]
name = "FluxPM"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }

# HTTP requests
reqwest = { version = "0.12.4", features = ["json", "stream"] }

# Serialization / Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"

# Hashing
sha2 = "0.10"

# Archives
tar = "0.4"
zstd = "0.13.1"

# Temp files
tempfile = "3.10.1"

# Error handling
thiserror = "1.0.61"
anyhow = "1.0.86"

# For handling streams
futures-util = "0.3.30"

# For finding user directories
dirs = "5.0.1"

# For URL parsing
url = "2.5.2"
